crates/elenchus-parser/tests/snapshots/errors__premise_missing_colon.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE modes\n            EXCLUSIVE\n                a b\n                a c\n        \"#)"
---
RESULT: 1 syntax error

other  (1 problem)
    line 2, col 22 - expected ':' after the premise name
      |         PREMISE modes
      |                      ^
